GPencil: Crashes Sculpt > Smooth Brush with [Shift Key] and with Auto Masking Stroke On #102092

Closed
opened 2022-10-27 06:20:35 +02:00 by Spyro · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 460M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 3.3.1, branch: master (modified), commit date: 2022-10-04 18:35, hash: b292cfe5a9
Worked: n/a

Short description of error
When using the Sculpt Smooth Brush by pressing the SHIFT key, If Auto Masking Stroke is ON for the Smooth Brush but OFF for the Original Brush it crashes Blender.

Exact steps for others to reproduce the error
Grease Pencil > Draw a Stroke
Use Sculpt GRAB or ANY Sculpt Brush AND make sure BRUSH>AUTO MASKING>STROKE option is turned OFF!
Use Sculpt SMOOTH by pressing the SHIFT key AND make sure the BRUSH>AUTO MASKING>STROKE option is turned ON! (Tooltip: Mask Stroked Below Brush Cursor)
Blender Crashes repeatedly
If you use the Sculpt SMOOTH Brush by selecting it from the TOOL menu it does not crash. It only crashes when accessing the Smooth Brush with SHIFT.
If the Sculpt GRAB brush AND the Sculpt SMOOTH brush BOTH have BRUSH>AUTO MASKING>STROKE option ON it will not crash.
Please find attached blend file: "greasePencil_SculptSmoothBrushCrash_Blender3.3.1.blend"

greasePencil_SculptSmoothBrushCrash_Blender3.3.1.blend

Thank you!

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 460M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 3.3.1, branch: master (modified), commit date: 2022-10-04 18:35, hash: `b292cfe5a9` Worked: n/a **Short description of error** When using the **Sculpt Smooth Brush** by pressing the **SHIFT** key, If **Auto Masking Stroke** is **ON** for the **Smooth Brush** but **OFF** for the **Original Brush** it crashes Blender. **Exact steps for others to reproduce the error** Grease Pencil > Draw a Stroke Use **Sculpt GRAB** or **ANY Sculpt Brush** AND make sure **BRUSH>AUTO MASKING>STROKE** option is turned **OFF**! Use **Sculpt SMOOTH** by pressing the **SHIFT** key AND make sure the **BRUSH>AUTO MASKING>STROKE** option is turned **ON**! (Tooltip: Mask Stroked Below Brush Cursor) Blender Crashes repeatedly If you use the **Sculpt SMOOTH Brush** by selecting it from the **TOOL menu** it does not crash. It only crashes when accessing the Smooth Brush with **SHIFT**. If the Sculpt GRAB brush AND the Sculpt SMOOTH brush BOTH have **BRUSH>AUTO MASKING>STROKE** option **ON** it will not crash. Please find attached blend file: "greasePencil_SculptSmoothBrushCrash_Blender3.3.1.blend" [greasePencil_SculptSmoothBrushCrash_Blender3.3.1.blend](https://archive.blender.org/developer/F13778222/greasePencil_SculptSmoothBrushCrash_Blender3.3.1.blend) Thank you!
Author

Added subscriber: @am_I_a_Beta_Tester

Added subscriber: @am_I_a_Beta_Tester
Antonio Vazquez changed title from Grease Pencil Crashes Sculpt > Smooth Brush with [Shift Key] and with Auto Masking Stroke On to GPencil: Crashes Sculpt > Smooth Brush with [Shift Key] and with Auto Masking Stroke On 2022-10-27 12:19:58 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-10-27 12:22:39 +02:00

This issue was referenced by 9676cb6d8d

This issue was referenced by 9676cb6d8dfc6b6ac6c51fd2b5f6cf82d9d42d1b

This issue was referenced by 2625c39ce7

This issue was referenced by 2625c39ce77ba303e44d9ea90ee8d1bc09c0f336

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thank you for taking care of it so quickly Antonio.

Thank you for taking care of it so quickly Antonio.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102092
No description provided.