Fix T102092: GPencil Sculpt Grab crash using Shift key

There was a problem with the hash table that was 
not created as expected.

Also fixed an unreported memory leak in Grab tool not
related to this crash but detected during debug.