source/blender/editors/gpencil/gpencil_sculpt_paint.c
@@ -1202,6 +1202,9 @@ static bool gpencil_sculpt_brush_init(bContext *C, wmOperator *op)
     gso->automasking_strokes = BLI_ghash_ptr_new(__func__);
   }
   else {
+    if (gso->automasking_strokes != NULL) {
+      BLI_ghash_free(gso->automasking_strokes, NULL, NULL);
+    }
     gso->automasking_strokes = NULL;
   }
   /* save mask */
@@ -1292,6 +1295,10 @@ static void gpencil_sculpt_brush_exit(bContext *C, wmOperator *op)
     }
 
     default:
+      if (gso->stroke_customdata != NULL) {
+        BLI_ghash_free(gso->stroke_customdata, NULL, NULL);
+        gso->stroke_customdata = NULL;
+      }
       break;
   }
 
@@ -2074,6 +2081,20 @@ static void gpencil_sculpt_brush_apply_event(bContext *C, wmOperator *op, const 
     gso->brush = gpencil_sculpt_get_smooth_brush(gso);
     if (gso->brush == NULL) {
       gso->brush = gso->brush_prev;
+    }
+    Brush *brush = gso->brush;
+    if (brush->gpencil_settings->sculpt_mode_flag &
+        (GP_SCULPT_FLAGMODE_AUTOMASK_STROKE | GP_SCULPT_FLAGMODE_AUTOMASK_LAYER |
+         GP_SCULPT_FLAGMODE_AUTOMASK_MATERIAL)) {
+      if (gso->automasking_strokes == NULL) {
+        gso->automasking_strokes = BLI_ghash_ptr_new(__func__);
+      }
+    }
+    else {
+      if (gso->automasking_strokes != NULL) {
+        BLI_ghash_free(gso->automasking_strokes, NULL, NULL);
+      }
+      gso->automasking_strokes = NULL;
     }
   }
   else {
